# RCP-Framework

./: .gitignore  02_agentic_reasoningOLD.ipynb  BEFORE_AFTER_COMPARISON.py  CITATION.cff  CONTRIBUTING.md  FAQ.py  Generic_Multiagent_v1.ipynb  HANDOFF.md  IMPLEMENTATION_STATUS.md  LICENSE  MACOS_SETUP.md  QUICK_START.md  README.md  REQUIREMENTS_EXPANSION_COMPLETE.md  SETUP.md  STRATEGY_PROPOSAL.md  TESTING_QUICK_START.md  TESTING_SETUP_COMPLETE.md  application_search_pattern_breakdown.py  check_db.py  check_encoding.py  check_schema.py  check_variants.py  clean_db.py  debug_product_count.py  debug_query.py  diagnose_chain.py  fix_example_encoding.py  implementation_roadmap.py  inspect_extracted_data.py  main.py  output.txt  paper.md  presentation.yaml  pyproject.toml  query_en857.py  requirements.txt  run_web.py  strategic_integration.py  strategic_patterns.py  (+38 more)
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
Layer_1/: 1_pdf_to_png.py  2_detect_headers_footers.py  3_detect_tables.py  4_extract_product.py  db_utils.py  detect_headers_footers.py  detect_tables.py  schema.sql
Layer_1-Extraction/: 1_pdf_to_png.py  2_detect_headers_footers.py  3_detect_tables.py  4_extract_product.py  db_utils.py  harvested_schema.sql
Layer_1-Extraction_b/: 0_extract_knowledge.py  1_extract_knowledge.py  1_pdf_to_png.py  2_detect_headers_footers.py  2_extract_couplings.py  2b_extract_categories.py  3_detect_tables.py  3a_extract_families.py  3b_detect_family_regions.py  3b_extract_products_vlm.py  4_extract_product.py  5_extract_couplings.py  EXTRACTION_PLAN.md  PIPELINE_GUIDE.md  README.md  STATUS.md  run_pipeline.sh
Layer_1a-Extraction/: 2_detect_headers_footers.py  3_detect_tables.py  4_extract_product.py
Layer_1a_Extraction/: 1_pdf_to_png.py  2_detect_headers_footers.py  3_detect_tables.py  README.md
Layer_1b-Extraction/: 0_extract_knowledge.py  1_pdf_to_png.py  2b_extract_categories.py  3a_extract_families.py  README.md  run_pipeline.sh
Layer_1b_Extraction/: 0_extract_knowledge.py  1_pdf_to_png.py  2b_extract_categories.py  3a_extract_families.py  3a_visualize_tables.py  README.md  db_utils.py  run_pipeline.sh
Layer_2/: .gitignore  QUICK_START.md  README.md  main.py  test_layer2_complete.py
Layer_2-Agentic/: test_new_functions.py
Layer_2_Agentic_Reasoning/: __init__.py
Layer_3-Application/: README.md  web_app.py
Layer_3_Application/: README.md  progress_flow.py  web_app.py
Layer_3_User_Interface/: README.md  __init__.py  web_app.py
Layer_Experiments/: README.md  b3_run_output.txt  deterministic_judge.py  extract_costs.py  run_evaluation.py  test_q51.json  test_q58.json  test_questions_20_hydroscand.txt  test_questions_50_hydroscand.txt  test_questions_appendix_b.json
Layer_Experiments_Case_I/: README.md  compute_mcnemar.py  run_evaluation.py  summarize_results.py
Layer_Experiments_Case_II/: deterministic_judge_saab.py  rag_baseline_saab.py  run_evaluation_saab.py
Layer_Experiments_Saab/: README.md  rcp_baseline_saab.py  sql_retrieval_saab.py  test_questions_saab.json
PDF/: test_questions.xlsx  test_questions_en.xlsx
Paper/: RCP_Paper_Detailed_Review.docx  case_ii_results.txt  case_study_recommendations.md  deep-research-report.md  interactnlmsample (20).tex  interactnlmsample (21).tex  interactnlmsample (22).tex  paper.tex  paper_manuscript.md  (+4 more)
(+1066 files in other folders)
