[project]
name = "rcp-framework"
version = "1.0.0"
description = "RCP Framework - A domain-agnostic agentic architecture for structured extraction of engineering knowledge"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests==2.32.5",
    "Pillow==12.0.0",
    "pymupdf==1.26.5",
    "langgraph==1.0.2",
    "langchain==1.0.3",
    "langchain-core==1.0.2",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.1",
    "langchain-text-splitters==1.0.0",
    "langchain-anthropic==1.0.1",
    "langchain-ollama==1.0.0",
    "langchain-openai==1.0.1",
    "langchain-chroma==1.0.0",
    "chromadb==1.3.0",
    "openai==2.6.1",
    "anthropic==0.72.0",
    "ollama==0.6.0",
    "Flask==3.1.2",
    "Flask-SocketIO==5.5.1",
    "python-socketio==5.14.3",
    "numpy==2.3.4",
    "SQLAlchemy==2.0.44",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "PyYAML==6.0.3",
    "httpx==0.28.1",
    "aiohttp==3.13.2",
    "python-dotenv==1.2.1",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tqdm==4.67.1",
    "onnxruntime==1.23.2",
    "uvicorn==0.38.0",
    "langsmith==0.4.39",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "dataclasses-json==0.6.7",
    "openpyxl>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["Layer_2_Agentic", "Layer_2_Agentic.*", "Layer_3_Application", "Layer_3_Application.*"]
